# spirograph-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src_vue/: package-lock.json  package.json  vue.config.js
src_vue/src/: App.vue
src_vue/src/router/: index.js
src_vue/src/store/: index.js
src_vue/src/store/modules/: spirograph.js
src_vue/src/utils/: pageTitle.js
src_vue/src/views/: Home.vue
